clean up of tables to use hypotheses

--- a/Appendices.Rmd
+++ b/Appendices.Rmd
@@ -69,79 +69,10 @@ cat("\\clearpage")
 cat("\\clearpage")
 ```
 
-# Appendix D: Correlation of covariates across the boxes
 
-```{r cov-correlation, fig.cap="Figure C1. Correlation of the covariates across boxes.  Correlation is shown by the width of the lines between neighboring boxes.",fig.width=5.5,message=FALSE,warning=FALSE, echo=FALSE}
-library(maps)
-library(mapdata)
-par(mfrow=c(2,2),mar=c(0,1,1,1))
-for(k in 1:4){
-  vari=c("PrecipTRMM","CHL.","SST.","SSH.")[k]
-  var.title=c("Precipitation","Chlorophyll","SST","SSH")[k]
-  a=makedat(covname=vari) #create anomalies for all boxes
-a=a[,paste(vari,1:14,sep="")]
-corra=cor(na.omit(a))
-mymap=map('worldHires','india',xlim=c(73,80),ylim=c(7,14),col="blue",lwd=2)
-botlats=c(12:8,12:8,9,8,8); toplats=botlats+1
-cenlats=botlats+.5
-tmp= c(74.2,74.9,75.3,75.5,76.3)     
-leftlons=c(tmp,tmp-1,73.5,74.3,73.3);rightlons=leftlons+1
-cenlons=leftlons+.5
-#plot the polygons
-for(i in 1:13){
-botlat=botlats[i]; toplat=botlat+1
-leftlon=leftlons[i]; rightlon=leftlon+1
-y=c(botlat,toplat,toplat,botlat,botlat)
-x=c(leftlon,leftlon,rightlon,rightlon,leftlon)
-polygon(x,y)
-}
+# Appendix D: Covariates along the SE India coast
 
-breaks=seq(0,1,.2)
-wids=c(0,0,2,3,4)
-neighbors=matrix(c(
-  1, 2, 
-  1, 6,
-  1, 7,
-  2, 3,
-  2, 7,
-  2, 8,
-  3, 4,
-  3, 8,
-  3, 9,
-  4, 5,
-  4, 9,
-  4, 10,
-  5, 10,
-  6, 7,
-  7, 8,
-  8, 9,
-  8, 11,
-  9, 10,
-  9, 11,
-  9, 12,
-  10, 12,
-  11, 12,
-  11, 13,
-  12, 13),ncol=2,byrow=TRUE) 
-for(i in 1:nrow(neighbors)){
-  from=neighbors[i,1]
-  to=neighbors[i,2]
-  val=corra[from,to]
-  col=ifelse(val<0,"red","black")
-  wid=wids[as.numeric(cut(abs(val),breaks))]
-  if(wid!=0) lines(cenlons[c(from,to)],cenlats[c(from,to)],col=col,lwd=wid)
-}
-title(var.title)
-}
-```
-
-```{r, results="asis", echo=FALSE}
-cat("\\clearpage")
-```
-
-# Appendix E: Covariates along the SE India coast
-
-```{r upw.mon, echo=FALSE,fig.cap="Figure E1. Upwelling index.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r upw.mon, echo=FALSE,fig.cap="Figure D1. Upwelling index.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
 ### FIGURE Upwelling
 oldpar=par(mfrow=c(2,2), mar=c(2,5,2,0))
 for(i in 2:5){
@@ -194,7 +125,7 @@ par(oldpar)
 cat("\\clearpage")
 ```
 
-```{r chl.mon, echo=FALSE,fig.cap="Figure E2. Chlorophyll-a.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r chl.mon, echo=FALSE,fig.cap="Figure D2. Chlorophyll-a.", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
 ### FIGURE CHL
 oldpar=par(mfrow=c(2,2), mar=c(2,5,2,0))
 for(i in 2:5){
@@ -247,9 +178,9 @@ par(oldpar)
 cat("\\clearpage")
 ```
 
-# Appendix F: Comparison of land and oceanic rainfall measurements
+# Appendix E: Comparison of land and oceanic rainfall measurements
 
-```{r rainfall.mon, echo=FALSE,fig.cap="Figure F1", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
+```{r rainfall.mon, echo=FALSE,fig.cap="Figure E1", fig.width=8,fig.height=8,message=FALSE,warning=FALSE}
 par(mfrow=c(2,1), mar=c(2,5,2,2))
 dat=seio_covariates_mon$Precip.Kerala
 datmon=seio_covariates_mon$Month
@@ -285,16 +216,18 @@ par(oldpar)
 cat("\\clearpage")
 ```
 
-```{r rainfall.mon.comparison, echo=FALSE,fig.cap="Figure F2. Monthly precipitation measured over land via land gauges versus the precipitation measured via remote sensing over the ocean.", fig.width=6,fig.height=6,message=FALSE,warning=FALSE}
+```{r rainfall.mon.comparison, echo=FALSE,fig.cap="Figure E2. Monthly precipitation measured over land via land gauges versus the precipitation measured via remote sensing over the ocean.", fig.width=6,fig.height=6,message=FALSE,warning=FALSE}
 plot(seio_covariates_mon$Precip.Kerala, seio_covariates_mon$precip.gpcp.kerala, ylab="land precipitation",
 xlab="ocean precipitation")
 ```
+
+#
 
 ```{r, results="asis", echo=FALSE}
 cat("\\clearpage")
 ```
 
-# Appendix G: Chlorophyll-a images in 2016
+# Appendix F: Chlorophyll-a images in 2016
 
 ```{r fig-chl-2016, out.width = "400px", fig.align='center', echo=FALSE, fig.cap=paste("Figure",  ref("fig:CHL")), message=FALSE, warning=FALSE}
 figfile = system.file("docs", "2016 CHL.png", package="SardineForecast")
