--- a/Figures.Rmd
+++ b/Figures.Rmd
@@ -232,41 +232,42 @@ oldpar=par(mfrow=c(2,2), mar=c(4,5,2,0))
 dat=dat.spawners
 Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
-covnames=c("SST.4.mon7to9.0", "SST.UPW.4.mon1to3.1")
-covtits =  c("Jul-Sep SST current season", "Jan-Mar UPW prior season")
-dat$cov0=dat[["SST.4.mon7to9.0"]]
-dat$cov1=dat[["SST.UPW.4.mon1to3.1"]]
+covnames=c("SST.2.10.3.yr.runsum.0", "SST.UPW.4.mon6to9.0")
+covtits =  c("3-yr average SST", "Jul-Sep UPW current season")
+dat$cov0=dat[["SST.2.10.3.yr.runsum.0"]]
+dat$cov1=dat[["SST.UPW.4.mon6to9.0"]]
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
 m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
-plot(m1, select=2, xlab="coastal SST in spawning months", ylab="Effect")
+plot(m1, select=2, xlab="2.5-year ave. SST", ylab="Effect")
 legend("topright","A", bty="n")
-legend("topleft","Model 1", bty="n")
+legend("topleft","Jul-Sep Catch", bty="n")
 abline(h=0, col="grey")
-plot(m2, select=2, xlab="Jan-Mar upwelling index in prior season", ylab="Effect")
+plot(m2, select=2, xlab="Jun-Sep upwelling index", ylab="Effect")
 legend("topright","B", bty="n")
+abline(v=0, col="blue")
 abline(h=0, col="grey")
-legend("topleft","Model 1", bty="n")
+legend("topleft","Jul-Sep Catch", bty="n")
 
 dat=dat.nonspawners
 Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
-covnames=c("SST.4.mon7to9.0", "SST.UPW.4.mon10to12.1")
-covtits =  c("Jul-Sep SST current season", "Oct-Dec UPW prior season")
-dat$cov0=dat[["SST.4.mon7to9.0"]]
-dat$cov1=dat[["SST.UPW.4.mon10to12.1"]]
+covnames=c("SST.2.10.3.yr.runsum.0", "SST.UPW.4.mon6to9.0")
+covtits =  c("2.5-yr average SST", "Jul-Sep UPW current season")
+dat$cov0=dat[["SST.2.10.3.yr.runsum.0"]]
+dat$cov1=dat[["SST.UPW.4.mon6to9.0"]]
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6) + s(cov0, sp=0.6), data=dat)
 m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6) + s(cov1, sp=0.6), data=dat)
-plot(m1, select=3, xlab="coastal SST in spawning months", ylab="Effect")
+plot(m1, select=3, xlab="2.5-year ave. SST", ylab="Effect")
 legend("topright","C", bty="n")
-legend("topleft","Model 2", bty="n")
+legend("topleft","Oct-Mar Catch", bty="n")
 abline(h=0, col="grey")
-plot(m2, select=3, xlab="Oct-Dec upwelling index in prior season", ylab="Effect")
+plot(m2, select=3, xlab="Jun-Sep upwelling index", ylab="Effect")
 legend("topright","D", bty="n")
-legend("topleft","Model 2", bty="n")
+legend("topleft","Oct-Mar Catch", bty="n")
 abline(h=0, col="grey")
 abline(v=0, col="blue")
-text(0,-2,"upwelling\ncoast colder\nthan offshore",pos=4)
-text(0,-2,"coast warmer\nthan offshore",pos=2)
+text(1.25,-2.5,"upwelling\ncoast colder\nthan offshore",pos=4)
+#text(0,-2,"coast warmer\nthan offshore",pos=2)
 par(oldpar)
 ```
 
@@ -286,55 +287,48 @@ oldpar=par(mfrow=c(2,2), mar=c(4,6,1,0))
 dat=dat.spawners
 Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
-covnames=c("SST.4.mon7to9.0", "SST.UPW.4.mon1to3.1")
-covtits =  c("Jul-Sep SST current season", "Jan-Mar UPW prior season")
-dat$cov0=dat[["SST.4.mon7to9.0"]]
-dat$cov1=dat[["SST.UPW.4.mon1to3.1"]]
+covnames=c("SST.2.10.3.yr.runsum.0")
+covtits =  c("Jul-Sep SST current season")
+dat$cov0=dat[["SST.2.10.3.yr.runsum.0"]]
 m0 = gam(spawners0 ~ s(nspawners1, sp=0.6), data=dat)
 m1 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m2 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6), data=dat)
-m3 = gam(spawners0 ~ s(nspawners1, sp=0.6) + s(cov1, sp=0.6) + s(cov0, sp=0.6), data=dat)
-# m2$model=exp(m2$model); m2$fitted.values=exp(m2$fitted.values)
-# m0$model=exp(m0$model); m0$fitted.values=exp(m0$fitted.values)
-xmin=min(m2$model[,"spawners0"],m2$fitted.values)
-xmax=jig+max(m2$model[,"spawners0"],m2$fitted.values)
+xmin=min(m1$model[,"spawners0"],m1$fitted.values,m0$fitted.values)
+xmax=jig+max(m0$model[,"spawners0"],m0$fitted.values,m1$fitted.values,m0$model[,"spawners0"],m0$fitted.values)
 plot(m0$model[,"spawners0"],m0$fitted.values, xlim=c(xmin,xmax), ylim=c(xmin,xmax),
-     xlab="Log catch in spawning months", ylab="Predicted log catch\nwithout upwelling")
+     xlab="Log catch in monsoon months", ylab="Predicted log catch\nwithout covariates")
 lines(c(xmin,xmax),c(xmin,xmax-jig))
 legend("topleft",paste("R2 =",round(100*summary(m0)$r.sq,digits=1)), bty="n")
 legend("topright","A", bty="n")
 
-plot(m2$model[,"spawners0"],m2$fitted.values, xlim=c(xmin,xmax), ylim=c(xmin,xmax),
-     xlab="Log catch in spawning months", ylab="Predicted log catch\nwith upwelling")
+plot(m1$model[,"spawners0"],m1$fitted.values, xlim=c(xmin,xmax), ylim=c(xmin,xmax),
+     xlab="Log catch in monsoon months", ylab="Predicted log catch\nwith covariates")
 lines(c(xmin,xmax-jig),c(xmin,xmax-jig)) # -jig to keep off legend
-legend("topleft",paste("R2 =",round(100*summary(m2)$r.sq,digits=1)), bty="n")
+legend("topleft",paste("R2 =",round(100*summary(m1)$r.sq,digits=1)), bty="n")
 legend("topright","B", bty="n")
 
 dat=dat.nonspawners
 Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
-covnames=c("SST.4.mon7to9.0", "SST.UPW.4.mon10to12.1")
-covtits =  c("Jul-Sep SST current season", "Oct-Dec UPW prior season")
-dat$cov0=dat[["SST.4.mon7to9.0"]]
-dat$cov1=dat[["SST.UPW.4.mon10to12.1"]]
+covnames=c("SST.2.10.3.yr.runsum.0")
+covtits =  c("Mar-May SST current season", "Jun-Sep SST current season")
+dat$cov0=dat[["SST.2.10.3.yr.runsum.0"]]
+dat$cov1=dat[["SST.UPW.4.mon6to9.0"]]
 m0 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6), data=dat)
 m1 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6) + s(cov0, sp=0.6), data=dat)
-m2 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6) + s(cov1, sp=0.6), data=dat)
-m3 = gam(nspawners0 ~ s(nspawners1, sp=0.6) + s(spawners2, sp=0.6) + s(cov0, sp=0.6) + cov1, data=dat)
 # m2$model=exp(m2$model); m2$fitted.values=exp(m2$fitted.values)
 # m0$model=exp(m0$model); m0$fitted.values=exp(m0$fitted.values)
-xmin=min(m0$model[,"nspawners0"],m0$fitted.values,m3$fitted.values)
-xmax=jig+max(m0$model[,"nspawners0"],m0$fitted.values,m3$fitted.values)
+xmin=min(m0$model[,"nspawners0"],m0$fitted.values,m1$fitted.values,m2$fitted.values)
+xmax=jig+max(m0$model[,"nspawners0"],m0$fitted.values,m1$fitted.values,m2$fitted.values)
 plot(m0$model[,"nspawners0"],m0$fitted.values, xlim=c(xmin,xmax), ylim=c(xmin,xmax),
-     xlab="Log catch in non-spawning months", ylab="Predicted log catch\nwithout covariates")
+     xlab="Log catch in post-monsoon months", ylab="Predicted log catch\nwithout covariates")
 lines(c(xmin,xmax-jig),c(xmin,xmax-jig))
 legend("topleft",paste("R2 =",round(100*summary(m0)$r.sq,digits=1)), bty="n")
 legend("topright","C", bty="n")
 
-plot(m3$model[,"nspawners0"],m3$fitted.values, xlim=c(xmin,xmax), ylim=c(xmin,xmax),
-     xlab="Log catch in non-spawning months", ylab="Predicted log catch\nwith covariates")
+plot(m1$model[,"nspawners0"],m1$fitted.values, xlim=c(xmin,xmax), ylim=c(xmin,xmax),
+     xlab="Log catch in post-monsoon months", ylab="Predicted log catch\nwith covariates")
 lines(c(xmin,xmax-jig),c(xmin,xmax-jig))
-legend("topleft",paste("R2 =",round(100*summary(m3)$r.sq,digits=1)), bty="n")
+legend("topleft",paste("R2 =",round(100*summary(m1)$r.sq,digits=1)), bty="n")
 legend("topright","D", bty="n")
 
 par(oldpar)
