--- a/setup.Rmd
+++ b/setup.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Generic set-up for all Rmds"
 author: "EE Holmes"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r message=FALSE,warning=FALSE, echo=FALSE}
@@ -57,12 +59,15 @@ respdat=log(respdat)
     "SST.7","SST.8","SST.9","SST.10",
     "SST.2","SST.3","SST.4","SST.5",
     "SST.7","SST.8","SST.9","SST.10",
+    "SST.2","SST.3","SST.4","SST.5",
+    "SST.7","SST.8","SST.9","SST.10",
     "SST.11","SST.12","SST.13",
     "SST.11","SST.12","SST.13",
     "SST.11","SST.12","SST.13",
     "SST.11","SST.12","SST.13",
     "SST.11","SST.12","SST.13",
-   "precip.gpcp.kerala", "precip.gpcp.kerala")
+   "precip.gpcp.kerala", "precip.gpcp.kerala",
+   "ONI")
   covmon=list(
      7:9,7:9,
      1:3,1:3,
@@ -75,6 +80,8 @@ respdat=log(respdat)
      1:12,1:12,
      6:9,6:9,6:9,6:9,
      6:9,6:9,6:9,6:9,
+     7:9,7:9,7:9,7:9,
+     7:9,7:9,7:9,7:9,
      9:10,9:10,9:10,9:10,
      9:10,9:10,9:10,9:10,
      1:12,1:12,1:12,1:12,
@@ -88,7 +95,8 @@ respdat=log(respdat)
      1:5,1:5,1:5,
      6:9,6:9,6:9,
      10:12,10:12,10:12,
-     4:5,6:7)
+     4:5,6:7,
+     1:12)
 
 #fix problem in seio_covariates_mon with SST in 1994.
   #replace with 5 year mean for that month
@@ -121,7 +129,7 @@ for(i in 1:length(covnames)){
     respdat[[paste0("max.",varname)]]=maxcovdat
   }
 }
-for(j in c("mon9to10.0", "mon6to9.0", "mon1to12.0", "mon3to5.0",  "mon10to12.0")){
+for(j in c("mon9to10.0", "mon6to9.0", "mon1to12.0", "mon3to5.0",  "mon10to12.0",  "mon7to9.0")){
   varname=paste0("SST.",c(2:5),".",j)
   tmp=apply(respdat[,varname],1,mean,na.rm=TRUE)
   varname=paste0("SST.2.10.",j)
@@ -135,6 +143,19 @@ for(i in colnames(respdat)){
   name=paste(str_sub(i, 1, str_length(i)-1),"2",sep="")
   respdat[[name]] = c(NA,NA,respdat[[i]][1:(dim(respdat)[1]-2)])
 }
+#make 3 year runsum of SST
+tmp=(respdat[,"SST.2.10.mon1to12.0"]*12 - respdat[,"SST.2.10.mon10to12.0"]*3 - respdat[,"SST.2.10.mon7to9.0"]*3) +
+    respdat[,"SST.2.10.mon1to12.1"]*12 +
+    respdat[,"SST.2.10.mon1to12.2"]*12
+varname="SST.2.10.3.yr.runsum.0"
+respdat[[varname]]=tmp/(12+12+6)
+for(i in "SST.2.10.3.yr.runsum.0"){
+  name=paste(str_sub(i, 1, str_length(i)-1),"1",sep="")
+  respdat[[name]]=c(NA,respdat[[i]][1:(dim(respdat)[1]-1)])
+  name=paste(str_sub(i, 1, str_length(i)-1),"2",sep="")
+  respdat[[name]] = c(NA,NA,respdat[[i]][1:(dim(respdat)[1]-2)])
+}
+
 respdat$Year=oilsardine_qtr$Year[oilsardine_qtr$Qtr==Qtr]
 
 fullrespdat = respdat
@@ -146,7 +167,8 @@ covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.",
              "SST.UPW.4.mon1to3.", "SST.UPW.4.mon6to9.", "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.",
              "max.SST.UPW.4.mon6to9.",
              "SST.2.10.mon6to9.", "SST.2.10.mon9to10.", "SST.2.10.mon1to12.",
-             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.")
+             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
+             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.")
 #set up to use consistent data
 dat=fullrespdat[,c("Year","spawners0", "nspawners1", "spawners0", "spawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
 dat=na.omit(dat)
@@ -160,9 +182,10 @@ covnames = c("precip.gpcp.kerala.mon6to7.", "precip.gpcp.kerala.mon4to5.",
              "SST.UPW.4.mon1to3.", "SST.UPW.4.mon6to9.", "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.",
              "max.SST.UPW.4.mon6to9.",
              "SST.2.10.mon6to9.", "SST.2.10.mon9to10.", "SST.2.10.mon1to12.", 
-             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.")
+             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
+             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.")
 #set up to use consistent data
-dat=fullrespdat[,c("Year","nspawners0", "nspawners1", "spawners0", "spawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
+dat=fullrespdat[,c("Year","nspawners0", "nspawners1", "nspawners2", "spawners0", "spawners1", "spawners2", paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
 dat=na.omit(dat)
 dat.nonspawners=dat
 if(any(diff(dat.nonspawners$Year)!=1))
@@ -182,10 +205,11 @@ covnames = c("log.CHL.4.mon1to3.", "log.CHL.4.mon7to9.", "log.CHL.4.mon10to12.",
              "SST.UPW.4.mon1to3.", "SST.UPW.4.mon6to9.", "SST.UPW.4.mon10to12.", "SST.UPW.4.mon4to6.",
              "max.SST.UPW.4.mon6to9.",
              "SST.2.10.mon6to9.", "SST.2.10.mon9to10.", "SST.2.10.mon1to12.",
-             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.")
+             "SST.2.10.mon3to5.", "SST.2.10.mon10to12.",
+             "SST.2.10.3.yr.runsum.", "ONI.mon1to12.")
 #set up to use consistent data
-dat=fullrespdat[,c("Year", "spawners0", "nspawners0",
-                   "nspawners1", "spawners2",
+dat=fullrespdat[,c("Year", "spawners0", "nspawners0","nspawners2",
+                   "nspawners1", "spawners2", "spawners1",
                    "CatchWin0", "CatchWin1", "CatchWin2",
                    paste(covnames, "0", sep=""), paste(covnames, "1", sep=""))]
 dat=na.omit(dat)
